--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,14 @@
 /* ===========================header setting 特殊設定=========================== */
 
-body.index header .function_list>i { /* index專屬淺色 */
+body.index header .function_list>i {
+    /* index專屬淺色 */
     color: #dadada;
 }
 
-body.index header nav { /* index專屬淺色 */
+body.index header nav {
+    /* index專屬淺色 */
     color: #dadada;
-    
+
 }
 
 /* ===========================首頁 hero setting=========================== */
@@ -42,9 +44,16 @@ body.index header nav { /* index專屬淺色 */
 
 .hero .bg img {
     display: block;
-    width: 100%;
-    height: auto;
 
+    width: 100%;
+    height: 100%;
+    display: block;
+
+    /* 2. 核心：圖片填充容器並保持比例，超出部分裁切 */
+    object-fit: cover;
+
+    /* 3. 核心：將圖片置中，裁切發生在左右兩邊 */
+    object-position: center;
 }
 
 .hero::before {
@@ -67,7 +76,7 @@ body.index header nav { /* index專屬淺色 */
     text-align: center;
 }
 
-h1{
+h1 {
     color: #FFD700;
     font-family: "Candal", sans-serif;
     font-size: 96px;
@@ -113,7 +122,7 @@ h1{
 /* ===========================首頁 capaign setting=========================== */
 
 
-.campaign_to_news{
+.campaign_to_news {
     background-image: url(/0_index/campaign_ribbon.png), url(/0_index/news_linear.png);
     background-repeat: no-repeat, no-repeat;
     background-position: center top, center bottom;
@@ -177,7 +186,7 @@ h1{
     align-items: center;
 }
 
-.campaign_photo>img{
+.campaign_photo>img {
     width: 100%;
     display: block;
 
@@ -240,22 +249,22 @@ h1{
     background-image: url(/0_index/black-thread-light.png);
 }
 
-.webshop .container{
+.webshop .container {
     display: flex;
     flex-wrap: wrap;
 }
 
-.webshop .text{
+.webshop .text {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.webshop h2{
+.webshop h2 {
     padding-bottom: 30px;
 }
 
-.webshop .btn{
+.webshop .btn {
     box-sizing: border-box;
     border: 2px solid #181818;
     border-radius: 10px;
@@ -265,14 +274,14 @@ h1{
     width: fit-content;
 }
 
-.webshop .cardlist{
+.webshop .cardlist {
     padding: 120px 0;
     display: flex;
     justify-content: center;
     gap: 20px;
 }
 
-.webshop .cardtext{
+.webshop .cardtext {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -282,31 +291,26 @@ h1{
     border-radius: 0 0 15px 15px;
 }
 
-.webshop .icon{
+.webshop .icon {
     align-self: flex-end;
     padding-top: 10px;
 }
 
-.webshop .icon i{
+.webshop .icon i {
     font-size: 32px;
     color: #fff;
 }
 
-.cardtext h3, .cardtext p{
+.cardtext h3,
+.cardtext p {
     color: #fff;
     padding-top: 10px;
 }
 
-.product_cat{
+.product_cat {
     color: #FFD700;
     /* padding bottom: 10px; */
 }
 
 
 /* ===========================首頁 webshop setting=========================== */
-
-
-
-
-
-
