--- a/css/grid.css
+++ b/css/grid.css
@@ -4,8 +4,8 @@
     padding-right: 10px; */
 }
 .row{
-    margin-left: 10px;
-    margin-right: 10px;
+    /* margin-left: 10px;
+    margin-right: 10px; */
     display: flex;
     flex-wrap: wrap;
 }
