--- a/css/general.css
+++ b/css/general.css
@@ -283,6 +283,84 @@ h3.card_title {
 /* 商品卡片通用設定 */
 
 
+
+/* 篩選通用設定 */
+
+.filter_area .filter_btn {
+    font-family: "Fira Sans", sans-serif;
+    background-color: transparent;
+    color: #CCA455;
+    border: 2px solid #CCA455;
+    padding: 10px 0;
+    width: 225px;
+    height: 53px;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 0.05em;
+    cursor: pointer;
+    margin-right: 15px;
+    border-radius: 10px;
+    transition: .3s;
+}
+
+.filter_area .filter_btn:hover {
+    color: #fff;
+    background-color: #CCA455;
+    transition: .3s;
+}
+/* 篩選通用設定 */
+
+
+/* 搜尋通用設定 */
+
+.search_area {
+    margin-left: auto;
+}
+
+.searchbar {
+    width: 588px;
+    height: 53px;
+    box-sizing: border-box;
+    border: 2px solid #CCA455;
+    border-radius: 10px;
+    padding: 10px 15px;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0.05em;
+    padding: 0 15px;
+    font-family: "Fira Sans", sans-serif;
+}
+
+.searchbar:focus {
+    /* border: 2px solid #FFD700;; */
+    outline: 1px solid #CCA455;
+    /* box-shadow: -4px 4px 10px 0 #00000033;; */
+}
+
+.search_submit_btn {
+    background-color: transparent;
+    height: 53px;
+    box-sizing: border-box;
+    font-family: "Fira Sans", sans-serif;
+    font-size: 20px;
+    cursor: pointer;
+    color: #CCA455;
+    font-weight: 500;
+    box-sizing: border-box;
+    border: 2px solid #CCA455;
+    border-radius: 10px;
+    padding: 0 16px;
+    margin-left: 20px;
+    transition: .3s;
+}
+
+.search_submit_btn:hover {
+    color: #fff;
+    background-color: #CCA455;
+    transition: .3s;
+}
+
+
 /* ===========================header setting 全頁面適用=========================== */
 /* ===========================特殊設定位於各css檔案內=========================== */
 
