--- a/css/index.css
+++ b/css/index.css
@@ -117,7 +117,15 @@ h1 {
     left: 50%;
     top: 58%;
     transform: translate(-50%, -50%);
-    z-index: 1;
+    z-index: 2;
+    transition: .2s;
+}
+
+.calendar_button:hover{
+    background-color: #55431Ecc;
+    color: #FFD700;
+    transform: translate(-50%, -50%) scale(1.02);
+    transition: .2s;
 }
 
 /* ===========================首頁 hero setting=========================== */
@@ -140,11 +148,18 @@ h1 {
     position: relative;
 }
 
+.campaign a{
+    text-decoration: none;
+    width: fit-content;
+}
+
 .campaign .card {
     background-color: #CCA455D9;
     width: 100%;
     display: flex;
 }
+
+
 
 .campaign .text {
     display: flex;
@@ -183,6 +198,14 @@ h1 {
     border-radius: 15px;
     padding: 15px 45px;
     width: fit-content;
+    background-color: transparent;
+    transition: .2s;
+}
+
+.program_button:hover  {
+    color: #fff;
+    border: #fff solid 2px;
+    transition: .2s;
 }
 
 .campaign_photo {
@@ -216,11 +239,18 @@ h1 {
     justify-content: center;
 }
 
-.news_card {
+.news .wrap a {
+    display: block;
     flex-basis: 32.291667%;
     flex-grow: 1;
     flex-shrink: 1;
-    /* min-width: 280px */
+    text-decoration: none;
+    
+}
+
+.news_card {
+    border-radius: 15px;
+    transition: .2s;
 }
 
 .news_photo img {
@@ -239,12 +269,18 @@ h1 {
     padding: 40px 30px 50px 30px;
 }
 
-.news_card:nth-child(1) {
-    margin-top: -50px;
+.news .wrap a:nth-child(1) {
+    transform: translate(0, -50px);
 }
 
-.news_card:nth-child(3) {
-    margin-top: 50px;
+.news .wrap a:nth-child(3) {
+    transform: translate(0, 50px);
+}
+
+.news .wrap a .news_card:hover{
+    scale: 1.02;
+    box-shadow: -4px 4px 10px 0 #00000033;
+    transition: .2s;
 }
 
 /* ===========================首頁 news setting=========================== */
@@ -253,6 +289,12 @@ h1 {
 .webshop {
     background-color: #F7F0E4;
     background-image: url(/0_index/black-thread-light.png);
+}
+
+.webshop a{
+    text-decoration: none;
+    width: fit-content;
+    height: fit-content;
 }
 
 .webshop .container {
@@ -270,14 +312,24 @@ h1 {
     padding-bottom: 30px;
 }
 
+.webshop p.description{
+    margin-bottom: 25px;
+}
+
 .webshop .btn {
     box-sizing: border-box;
     border: 2px solid #181818;
     border-radius: 10px;
     padding: 14px 80px;
     color: #181818;
-    margin-top: 25px;
     width: fit-content;
+    transition: .3s;
+}
+
+.webshop .btn:hover {
+    border: 2px solid #CCA455;
+    color: #CCA455;
+    transition: .3s;
 }
 
 .webshop .cardlist {
@@ -287,13 +339,28 @@ h1 {
     gap: 20px;
 }
 
-.webshop .card {
-    box-shadow: -4px 4px 10px 0 #00000033;
+.webshop .card {    
     background-color: transparent;
     border-radius: 15px;
     overflow: hidden;
+    transition: .3s;
 }
 
+.webshop .card:hover{
+    box-shadow: -4px 4px 10px 0 #00000033;
+    scale: 1.02;
+    transition: .3s;
+}
+
+.webshop .card i{
+    color: #fff;
+    transition: .3s;
+}
+
+.webshop .card:hover i{
+    color: #CCA455;
+    transition: .3s;
+}
 
 
 .webshop .cardpic img {
