ver2 mid-presentation 20Nov2025

--- a/css/program.css
+++ b/css/program.css
@@ -87,7 +87,8 @@
     color:#CCA455;
     border: none;
     margin: 7px;
-    cursor: pointer;    
+    cursor: pointer;   
+    background-color: transparent; 
 }
 
 
